# Maior-Menor_Elemento

./: CMakeLists.txt  copyArray.h  createArray.c  createArray.h  main.c  minMax1.c  minMax1.h  minMax2.c  minMax2.h  minMax3.c  minMax3.h  numOps.h  printArray.h
